css/styles.css
/* ... */
.bricks-wrapper .entry__title a,
.bricks-wrapper .entry__title a:visited {
    color : black;
}

.bricks-wrapper .entry__title a:focus,
.bricks-wrapper .entry__title a:hover {
    color : rgba(0, 0, 0, 0.8);
}

.bricks-wrapper .entry__meta {
    display        : block;
    font-family    : var(--font-1);
    font-weight    : 400;
    font-size      : 1.1rem;
    text-transform : uppercase;
    letter-spacing : .1em;
    line-height    : 1.455;
    color          : black;
    margin-bottom  : var(--vspace-0_375);
}

.bricks-wrapper .entry__meta a {
    font-weight : 300;
    color       : var(--color-gray-15);
}

.bricks-wrapper .entry__meta a:focus,
.bricks-wrapper .entry__meta a:hover {
    color : black;
}

.bricks-wrapper .entry__meta .cat-links,
.bricks-wrapper .entry__meta .byline {
    display : inline-block;
}

.bricks-wrapper .entry__meta .cat-links {
    margin-right : .8rem;
}

.bricks-wrapper .entry__meta .cat-links a::after {
    content : ", ";
}

.bricks-wrapper .entry__meta .cat-links a:last-child::after {
    display : none;
}

.bricks-wrapper .entry__excerpt {
    font-weight : 400;
    font-size   : 1.5rem;
    line-height : 1.733;
}

.bricks-wrapper .entry__excerpt p {
    margin-bottom : var(--vspace-0_75);
}

.bricks-wrapper .entry__more-link {
    display        : inline-block;
    font-size      : 1.1rem;
    text-transform : uppercase;
    letter-spacing : .15em;
    color          : black;
    border-bottom  : 1px solid transparent;
}

.bricks-wrapper .entry__more-link:focus,
.bricks-wrapper .entry__more-link:hover {
    border-bottom : 1px solid black;
}

/* ------------------------------------------------------------------- 
 * responsive:
 * project-wide and shared styles
 * ------------------------------------------------------------------- */
@media screen and (max-width: 1600px) {
    .bricks {
        --brick-padding : 2.8rem;
    }
}

@media screen and (max-width: 1500px) {
    .bricks {
        --brick-padding : 4rem;
    }

    .bricks .masonry {
        max-width : 1280px;
    }

    .bricks-wrapper .grid-sizer,
    .bricks-wrapper .brick {
        width : 33.3333%;
    }
}

@media screen and (max-width: 1200px) {
    .bricks {
        --brick-padding : 2.8rem;
    }
}

@media screen and (max-width: 1080px) {
    .bricks {
        --brick-padding : 4rem;
    }

    .bricks-wrapper .grid-sizer,
    .bricks-wrapper .brick {
        width : 50%;
    }
}

@media screen and (max-width: 900px) {
    .bricks {
        --brick-padding : 2.8rem;
    }
}

@media screen and (max-width: 800px) {
    .bricks {
        --brick-padding : 2.4rem;
    }
}

@media screen and (max-width: 700px) {
    .bricks {
        --brick-padding : 4rem;
    }

    .bricks .masonry {
        max-width : 500px;
    }

    .bricks-wrapper .grid-sizer,
    .bricks-wrapper .brick {
        width : 100%;
    }
}

@media screen and (max-width: 420px) {
    .bricks .masonry {
        width : 100%;
    }

    .bricks-wrapper .brick {
        padding-right : 8vw;
        padding-left  : 8vw;
    }

    .bricks-wrapper .entry__title {
        font-size : calc(var(--text-size) * 1.659);
    }
}


/* ===================================================================
 * # PAGE WRAP
 *
 *
 * ------------------------------------------------------------------- */
.s-pagewrap {
    display        : flex;
    flex-direction : column;
    min-height     : 100%;
    overflow       : hidden;
    position       : relative;
}


/* ===================================================================
 * # SITE HEADER
 *
 *
 * ------------------------------------------------------------------- */
.s-header {
    z-index  : 100;
    width    : 100%;
    position : absolute;
    top      : 2.8rem;
    left     : 0;
}

/* --------------------------------------------------------------------
 * ## branding
 * -------------------------------------------------------------------- */
.s-header__branding {
    z-index        : 2;
    font-family    : var(--font-2);
    font-size      : 2.8rem;
    line-height    : 1;
    letter-spacing : -0.03em;
    transform      : translateY(-50%);
    position       : absolute;
    top            : 50%;
    left           : 3.6rem;
}

.s-header__branding .site-title {
    margin  : 0;
    padding : 0;
}

.s-header__branding a {
    margin  : 0;
    padding : 0;
    outline : 0;
    border  : none;
    color   : black;
}

.ss-home .s-header__branding a {
    color : white;
}

/* --------------------------------------------------------------------
 * ## main navigation
 * -------------------------------------------------------------------- */
.s-header__navigation {
    max-width : none;
    width     : 100%;
}

.s-header__nav-wrap {
    display         : flex;
    justify-content : center;
    margin-left     : 6rem;
    margin-right    : 6rem;
    width           : 100%;
}

.ss-home .s-header__nav-wrap {
    margin-left : 50%;
}

.s-header__nav-wrap .s-header__nav-heading {
    display        : none;
    font-family    : var(--font-1);
    font-weight    : 300;
    font-size      : var(--text-size);
    color          : var(--color-text-light);
    letter-spacing : -0.02em;
    padding-left   : 3.2rem;
    margin-top     : 0;
    margin-bottom  : var(--vspace-1_75);
    position       : relative;
}

.s-header__nav-wrap .s-header__nav-heading::before {
    content          : "";
    display          : block;
    width            : 2rem;
    height           : 1px;
    background-color : rgba(0, 0, 0, 0.3);
    position         : absolute;
    top              : 50%;
    left             : 0;
}

.s-header__nav {
    list-style : none;
    display    : flex;
    flex-flow  : row nowrap;
    margin     : 0;
    padding    : 0;
}
/* ... */

